fixes weird spacing issue, still some jumps in transition

--- a/carousel.css
+++ b/carousel.css
@@ -1,35 +1,32 @@
-.items {
-  height: 300px;
-  width: 300px;
-  position: relative;
-  overflow: hidden;
+div.carousel {
+  height: 450px;
+  width: 800px;
 }
 
-.items img{
+div.carousel > div.items {
+  position: relative;
+  overflow: hidden;
+
   height: 100%;
   width: 100%;
+}
+
+div.carousel > div.items > *:not(.active) {
   display: none;
 }
 
-
-.items .active {
-  display: block;
-}
-
-.left.active {
-  position: absolute;
-  left: -100%;
-  top: 0;
-}
-
-.right.active {
-  position: absolute;
-  left: 100%;
-  top: 0;
-}
-
-.active{
+div.carousel > div.items > *.active {
   position: absolute;
   left: 0%;
+  width: 100%;
+
   transition: left 500ms linear;
+}
+
+div.carousel > div.items > *.active.left {
+  left: -100%;
+}
+
+div.carousel > div.items > *.active.right {
+  left: 100%;
 }
